re PR go/47378 (ld warning linking with libgo.so: relocation bound to a symbol with STV_PROTECTED visibility)

PR go/47378
Don't use protected visibility for type descriptors.

From-SVN: r169946